# orianne

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  calculatorbuilder  main.cpp
.github/workflows/: build-linux.yaml  build-windows.yaml  build.yaml
appdir/usr/share/applications/: Orianne.desktop  TestTaker.desktop
src/: FlowLayout.cpp  FlowLayout.h  form.ui  main.cpp
